--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@ body {
 <body>
 	<div id="container">
 		<!-- Edit the letter attr to: N, E, T, F, L, I or X -->
-		<netflixintro letter="T">
+		<netflixintro letter="F">
 		  <div class="helper-1">
 			<div class="effect-brush">
 			  <span class="fur-31"></span>
